reworked look to be based around dark grey, gold and blue

--- a/src/web.public/public/stylesheets/partials/_base.scss
+++ b/src/web.public/public/stylesheets/partials/_base.scss
@@ -1,7 +1,7 @@
 
-$main-spot-colour: #9cc243;
-$alt-spot-colour: #8d5e37;
-$dark-background-colour: #808183;
+$main-spot-colour: #c5aa67;
+$alt-spot-colour: #6d96d5; //#5686cf; // #9cc243;
+$dark-background-colour: #626265;
 $light-background-colour: #c3d5d4;
 $icon-colour: darken($dark-background-colour, 5);
 $control-border-colour: darken($dark-background-colour, 10);
