--- a/src/web.public/public/stylesheets/partials/_typography.scss
+++ b/src/web.public/public/stylesheets/partials/_typography.scss
@@ -23,6 +23,10 @@ p em {
   font-weight: bold;
 }
 
+h1 {
+  font-family: 'Bree Serif', serif;
+}
+
 // SEARCH RESULTS TEXT
 
 #search-results .disabled {
