--- a/src/web.public/public/stylesheets/partials/_custom-controls.scss
+++ b/src/web.public/public/stylesheets/partials/_custom-controls.scss
@@ -6,7 +6,7 @@ $platform-big-button-small-screen-size: 40px;
 $platform-big-button-large-screen-size: 50px;
 $platform-big-button-border-width: 2px;
 $platform-big-button-border-radius: $normal-border-radius;
-$platform-big-button-border-colour: $main-spot-colour;
+$platform-big-button-border-colour: $alt-spot-colour;
 
 #home-page .platform-input {
   display: table;
@@ -114,13 +114,19 @@ header .searchbox-wrapper {
       font-weight: normal;
       min-width: 140px;
       position: relative;
-      background: white;
-      border: 1px solid $control-border-colour;
+      //background: white;
+      //border: 1px solid $control-border-colour;
+      border: 1px solid lighten($control-border-colour, 30);
       @include border-top-radius(6px);
       @include border-bottom-radius(6px);
-      color: $text-light-colour;
+      //color: $text-light-colour;
       cursor: pointer;
       text-align: left;
+
+      background-color: transparent;
+      color: white;
+      //border-color: #aaa;
+
 
       .caret:after
       {
@@ -129,6 +135,8 @@ header .searchbox-wrapper {
         font-family: "icomoon";
         content: "/";
         color: $icon-colour;
+
+        color: white;
       }
     }
 
@@ -210,7 +218,7 @@ $searchbox-border-colour: $control-border-colour;
   }
 
   div button {
-    @include button(lighten($main-spot-colour, 25));
+    @include button(lighten($main-spot-colour, 15));
 
     display: table-cell;
     width: 46px;
