End of trying to fix iphone rendering issue

--- a/src/web.public/public/stylesheets/main.scss
+++ b/src/web.public/public/stylesheets/main.scss
@@ -7,17 +7,17 @@
 
 @import 'bourbon/bourbon';
 @import 'neat/neat';
-//@import "vendor/mq";
-//@import "vendor/angular-dropdowns";
-//
-//@import "partials/base";
-//@import "partials/reset";
-//@import "partials/browser";
-//@import "partials/typography";
-//@import "partials/layout";
-//@import "partials/allmighty-autocomplete";
-//@import "partials/links";
-//@import "partials/input";
-//@import "partials/logos";
-//@import "partials/items";
-//@import "partials/custom-controls";
+@import "vendor/mq";
+@import "vendor/angular-dropdowns";
+
+@import "partials/base";
+@import "partials/reset";
+@import "partials/browser";
+@import "partials/typography";
+@import "partials/layout";
+@import "partials/allmighty-autocomplete";
+@import "partials/links";
+@import "partials/input";
+@import "partials/logos";
+@import "partials/items";
+@import "partials/custom-controls";
