--- a/src/web.public/public/stylesheets/partials/_allmighty-autocomplete.scss
+++ b/src/web.public/public/stylesheets/partials/_allmighty-autocomplete.scss
@@ -29,7 +29,7 @@
     width: 100%;
     padding: 3px 3px 3px 9px;
     background-color: white;
-    line-height: 1.2em; //0.8em;
+    line-height: 24px;
 }
 
 .autocomplete li.active {
