--- a/src/web.public/public/stylesheets/partials/_layout.scss
+++ b/src/web.public/public/stylesheets/partials/_layout.scss
@@ -1,11 +1,11 @@
 // STICKY FOOTER
 
 // http://pixelsvsbytes.com/blog/2011/09/sticky-css-footers-the-flexible-way/
-//html, body { height: 100%; }
-//body { display: table; min-width: 320px; width: 100%; }
-//main { height: auto; }
-//header, footer, main { display: table-row; }
-//header, footer { height: 1px; }
+html, body { height: 100%; }
+body { display: table; min-width: 320px; width: 100%; }
+main { height: auto; }
+header, footer, main { display: table-row; }
+header, footer { height: 1px; }
 
 // Sticky footer adjustment
 #home-page {
@@ -35,9 +35,6 @@ header {
     background-color: $dark-background-colour;
     padding-bottom: 2px;
     @include linear-gradient(to top, darken($dark-background-colour, 10), $dark-background-colour, $fallback: $dark-background-colour);
-
-
-
 
     .search-header-inner-wrapper {
       max-width: $website-max-width;
@@ -106,14 +103,12 @@ header {
 // MAIN
 
 main .main-wrapper {
-  //@include clearfix;
+  @include clearfix;
 
   max-width: $website-max-width;
   margin-left: auto;
   margin-right: auto;
-  padding: 6px 6px 6px 6px;
-  margin-bottom: 20px;
-  //min-height: 300px;
+  padding: 6px 6px 20px 6px;
 
   @include mq($from: mobile-landscape) {
     padding-left: 50px;
@@ -203,25 +198,6 @@ footer .footer-centering-wrapper {
     bottom: 13px;
     margin-right: 30px;
   }
-
-  p {
-    font-size: 9px;
-    color: darken($main-spot-colour, 10);
-    text-align: center;
-
-    img {
-      display: none;
-
-      @include mq($from: tablet) {
-        display: block;
-        position: absolute;
-        bottom: 16px;
-        right: 0px;
-        width: 200px;
-        height: 58px;
-      }
-    }
-  }
 }
 
 // SEARCH RESULTS PAGE
@@ -246,26 +222,26 @@ footer .footer-centering-wrapper {
     }
   }
 
-//  .pagination-wrapper {
-//    .centering-wrapper {
-//      float: right;
-//      position: relative;
-//      left: -50%;
-//      text-align: left;
-//
-//      @include mq($from: tablet) {
-//        float: none;
-//        left: 0px;
-//      }
-//
-//      ul {
-//        position: relative;
-//        left: 50%;
-//
-//        @include mq($from: tablet) {
-//          left: 0px;
-//        }
-//      }
-//    }
-//  }
+  .pagination-wrapper {
+    .centering-wrapper {
+      float: right;
+      position: relative;
+      left: -50%;
+      text-align: left;
+
+      @include mq($from: tablet) {
+        float: none;
+        left: 0px;
+      }
+
+      ul {
+        position: relative;
+        left: 50%;
+
+        @include mq($from: tablet) {
+          left: 0px;
+        }
+      }
+    }
+  }
 }
