--- a/src/web.public/public/stylesheets/partials/_links.scss
+++ b/src/web.public/public/stylesheets/partials/_links.scss
@@ -22,13 +22,11 @@
   }
 
   a.facebook {
-    //background-position: 0 0;
     margin-right: 2px;
     color: #3a579b;
   }
 
   a.twitter {
-    //background-position: 32px 0;
     color: #598dca;
   }
 }
@@ -55,8 +53,7 @@
 
 footer .call-to-action {
   a, a:link, a:visited, a:hover, a:active {
-    //color: white;
-    color: lighten(black, 20);
+    color: $text-light-colour;
     text-decoration: none;
     font-weight: normal;
   }
@@ -247,6 +244,24 @@ li.app-search-result h4 {
   a:hover,
   a:active {
     color: darken($alt-spot-colour, 10);
+    font-weight: normal;
+  }
+
+  a,
+  a:link,
+  a:visited,
+  a:active {
+    text-decoration: none;
+  }
+}
+
+p.warning {
+  a,
+  a:link,
+  a:visited,
+  a:hover,
+  a:active {
+    color: darken($main-spot-colour, 20);
     font-weight: normal;
   }
 
