--- a/src/web.public/public/stylesheets/partials/_items.scss
+++ b/src/web.public/public/stylesheets/partials/_items.scss
@@ -2,6 +2,7 @@ p.error,
 p.warning {
   padding: 12px;
   text-align: center;
+  line-height: 16pt;
 
   @include mq($from: tablet) {
     //margin-left: auto;
@@ -14,11 +15,31 @@ p.warning {
 p.error {
   background: tint($error-colour, 80);
   color: $error-colour;
+
+  .icon:before {
+    display: block;
+    font-size: 36pt;
+    line-height: 36pt;
+    margin-bottom: 12px;
+    font-family: "icomoon";
+    content: "+";
+    color: $error-colour;
+  }
 }
 
 p.warning {
   background: lighten($dark-background-colour, 45);
   color: $text-light-colour;
+
+  .icon:before {
+    display: block;
+    font-size: 36pt;
+    line-height: 36pt;
+    margin-bottom: 12px;
+    font-family: "icomoon";
+    content: "!";
+    color: $icon-colour;
+  }
 }
 
 h1 {
