--- a/src/web.public/public/stylesheets/partials/_layout.scss
+++ b/src/web.public/public/stylesheets/partials/_layout.scss
@@ -105,6 +105,7 @@ header {
 main .main-wrapper {
   @include clearfix;
 
+  position: relative; // positioning parent for spinners.
   max-width: $website-max-width;
   margin-left: auto;
   margin-right: auto;
