--- a/src/web.public/public/stylesheets/partials/_base.scss
+++ b/src/web.public/public/stylesheets/partials/_base.scss
@@ -9,6 +9,7 @@ $alt-black-colour: lighten(black, 20);;
 $text-light-colour: darken($dark-background-colour, 20);
 $error-colour: #a03d34;
 $warning-colour: $alt-spot-colour;
+$main-links-colour: darken($main-spot-colour, 10);
 $disabled-text-colour: #bbb;
 $normal-border-radius: 6px;
 //$body-font-family: 300 "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
