--- a/src/web.public/public/stylesheets/partials/_items.scss
+++ b/src/web.public/public/stylesheets/partials/_items.scss
@@ -72,15 +72,9 @@ h1 {
   h4 {
     margin-bottom: 3px;
     font-size: 18px;
-
-    em {
-      font-weight: bold;
-      color: darken($alt-spot-colour, 20);
-    }
   }
 
   p {
-    //padding-bottom: 21px;
     font-size: 14px;
     color: $alt-black-colour;
 
@@ -92,11 +86,15 @@ h1 {
 
 .app-search-result {
   @include clearfix;
-  margin-bottom: 24px;
+  margin-bottom: 12px;
+  padding-bottom: 12px;
   max-width: 550px;
+
+  border-bottom: 1px solid lighten($control-border-colour, 60);
 
   h4, p {
     margin-left: 57px + 6px;
+    overflow: hidden !important;
   }
 
   h4 {
