--- a/src/web.public/public/stylesheets/partials/_browser.scss
+++ b/src/web.public/public/stylesheets/partials/_browser.scss
@@ -22,3 +22,8 @@ textarea {
 //  -webkit-backface-visibility: hidden;
 //  overflow: hidden;
 //}
+
+// Stop firefox showing borders while images are loading.
+img:-moz-loading {
+  visibility: hidden;
+}
