Initial version of mobile app page

--- a/src/web.public/public/stylesheets/main.scss
+++ b/src/web.public/public/stylesheets/main.scss
@@ -9,6 +9,7 @@
 @import 'neat/neat';
 @import "vendor/mq";
 @import "vendor/angular-dropdowns";
+@import "vendor/angular-carousel";
 
 @import "partials/base";
 @import "partials/reset";
@@ -21,3 +22,4 @@
 @import "partials/logos";
 @import "partials/items";
 @import "partials/custom-controls";
+@import "partials/akin-score";
