--- a/src/web.public/public/stylesheets/partials/_base.scss
+++ b/src/web.public/public/stylesheets/partials/_base.scss
@@ -5,8 +5,8 @@ $dark-background-colour: #626265;
 $light-background-colour: #c3d5d4;
 $icon-colour: darken($dark-background-colour, 5);
 $control-border-colour: darken($dark-background-colour, 10);
-$alt-black-colour: lighten(black, 20);;
-$text-light-colour: darken($dark-background-colour, 20);
+$alt-black-colour: $dark-background-colour; //lighten(black, 20);
+$text-light-colour: lighten($dark-background-colour, 20);
 $error-colour: #a03d34;
 $warning-colour: $alt-spot-colour;
 $main-links-colour: darken($main-spot-colour, 10);
