--- a/src/web.public/public/stylesheets/partials/_links.scss
+++ b/src/web.public/public/stylesheets/partials/_links.scss
@@ -34,6 +34,10 @@
 // AUTOCOMPLETE CLEAR BUTTON
 
 .autocomplete {
+  a {
+    font-size: 16px !important;
+  }
+
   a.clear-search,
   a.clear-search:link,
   a.clear-search:visited,
