--- a/src/web.public/public/stylesheets/partials/_links.scss
+++ b/src/web.public/public/stylesheets/partials/_links.scss
@@ -57,7 +57,7 @@
 
 footer .call-to-action {
   a, a:link, a:visited, a:hover, a:active {
-    color: $text-light-colour;
+    color: $alt-black-colour;
     text-decoration: none;
     font-weight: normal;
   }
